@@ -215,8 +215,8 @@ CREATE TABLE pages (
   alias varchar(32) DEFAULT '' NOT NULL,
   l18n_cfg tinyint(4) DEFAULT '0' NOT NULL,
   fe_login_mode tinyint(4) DEFAULT '0' NOT NULL,
-  be_layout int(10) DEFAULT '0' NOT NULL,
-  be_layout_next_level int(10) DEFAULT '0' NOT NULL,
+  backend_layout int(10) DEFAULT '0' NOT NULL,
+  backend_layout_next_level int(10) DEFAULT '0' NOT NULL,
   PRIMARY KEY (uid),
   KEY t3ver_oid (t3ver_oid,t3ver_wsid),
   KEY parent (pid,sorting,deleted,hidden),
