@@ -590,7 +590,7 @@ TYPO3.Backend.t3Grid = Ext.extend(Ext.Component, {
 	 * @return string
 	 */
 	export2LayoutRecord: function() {
-		var result = "be_layout {\n\tcolCount = " + this.colCount + "\n\trowCount = " + this.rowCount + "\n\trows {\n";
+		var result = "backend_layout {\n\tcolCount = " + this.colCount + "\n\trowCount = " + this.rowCount + "\n\trows {\n";
 		for (var row = 0; row < this.rowCount; row++) {
 			result += "\t\t" + (row + 1) + " {\n";
 			result += "\t\t\tcolumns {\n";
